fixed fingerprints being too big

--- a/web/app/styles/_media-queries.scss
+++ b/web/app/styles/_media-queries.scss
@@ -10,6 +10,11 @@
       width: 100%;
     }
   }
+  .fingerprint-list{
+    h4{
+      font-size: 12px;
+    }
+  }
 }
 
 @media all and (max-width: 1000px) {
